# isometric-rotation-demo

./: CMakeLists.txt  LICENSE  WindowsToolchain.cmake
src/: gfx.c  gfx.h  input.c  input.h  main.c  world.h
tools/: build_linux.sh  build_windows.sh
